k8s/01_namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: easy-shop
  labels:
    name: easyshop
    environment: production
