k8s/08_shop-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deployment
  namespace: easy-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
      containers:
      - name: easyshop
        image: anurag904/easyshop-app:latest
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 3
          periodSeconds: 10
