k8s/06_mongodb-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
  namespace: easy-shop
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
