k8s/09_shop-service.yml
apiVersion: v1
kind: Service
metadata:
  name: easyshop-service
  namespace: easy-shop
spec:
  selector:
    app: easyshop
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
